class representing asset added

--- a/src/NSprockets/NSprockets.csproj
+++ b/src/NSprockets/NSprockets.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asset.cs" />
+    <Compile Include="AssetLoader.cs" />
+    <Compile Include="AssetType.cs" />
     <Compile Include="Directive.cs" />
     <Compile Include="DirectiveType.cs" />
     <Compile Include="FilePointer.cs" />
