--- a/src/NSprockets.Tests/NSprockets.Tests.csproj
+++ b/src/NSprockets.Tests/NSprockets.Tests.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetTest.cs" />
     <Compile Include="DirectiveParserTest.cs" />
-    <Compile Include="NSprocketsToolTest.cs" />
+    <Compile Include="AssetLoaderTest.cs" />
     <Compile Include="ParserContextTest.cs" />
     <Compile Include="TestParserContext.cs" />
     <Compile Include="TestRunner.cs" />
