- Asset extended for Load method that handles all the parsing stuff - AssetLoader is the main class for loading assets now

--- a/src/NSprockets.Tests/NSprockets.Tests.csproj
+++ b/src/NSprockets.Tests/NSprockets.Tests.csproj
@@ -69,7 +69,7 @@
     <Content Include="assets\scripts1\scripts1.2\test1.2.b.js" />
     <Content Include="assets\scripts1\scripts1.2\test1.2.a.js" />
     <Content Include="assets\scripts1\test1.b.js" />
-    <Content Include="assets\scripts1\test1.a.js" />
+    <Content Include="assets\scripts1\test1.A.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
