--- a/src/NSprockets.Example/Web.config
+++ b/src/NSprockets.Example/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+
+    <add key="NSprockets.ConcatToSingleFile" value="1"/>
+    <add key="NSprockets.Minify" value="1"/>
   </appSettings>
     
   <system.web>
