Posibility to configurat nsproc from web.config excluded for OutputDirectory and LookupDirectories.

--- a/src/NSprockets.Example/Web.config
+++ b/src/NSprockets.Example/Web.config
@@ -12,6 +12,8 @@
 
     <add key="NSprockets.ConcatToSingleFile" value="1"/>
     <add key="NSprockets.Minify" value="1"/>
+    <add key="NSprockets.LookupDirectories" value="~/scripts"/><!-- can contain multiple values separated by comma -->
+    <add key="NSprockets.OutputDirectory" value="~/scripts"/>
   </appSettings>
     
   <system.web>
