Small refactoring a few parts of NSprocketsTool moved to AssetPipeline class.

--- a/src/NSprockets/NSprockets.csproj
+++ b/src/NSprockets/NSprockets.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Abstract\IProcessorContext.cs" />
     <Compile Include="NSprocketsTool.cs" />
     <Compile Include="DirectiveParser.cs" />
-    <Compile Include="Processors\JsMinifierProcessor.cs" />
+    <Compile Include="Processors\JsProcessor.cs" />
     <Compile Include="Processors\ProcessorBase.cs" />
     <Compile Include="ProcessorContext.cs" />
     <Compile Include="Processors\CoffeeScriptProcessor.cs" />
